[package]
name = "FluxyTool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0"
console = "0.14.1"
crossterm = "0.19"
bytes = "1.0.1"
serde_urlencoded = "0.6"
async-trait = "0.1"
url = "2.2.2"
scraper = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
csv = "1.1"
rand = "0.8"
imap = "2"
native-tls = "0.2"
regex = "1.5.4"
urlencoding = "1.0"
html2text = "0.1.3"
quoted_printable = "0.4.8"
mac_address = "1.0.3"
winapi = { version = "0.3", features = ["wincon"] }
futures = "0.3"
select = "0.4.3"
names = "0.12.0"
self_update = "0.18"
dialoguer = "0.10.4"
